# NewFileStorage

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fffaf6db8c2f_add_files_table.py
src/api/v1/: files.py
src/core/: settings.py
src/db/: session.py
src/models/: __init__.py  base.py  files.py
src/schemas/: files.py
src/services/: cloud_storage.py  upload_file.py
src/services/crud/: files.py
src/utils/: logger.py  raising_http_excp.py
tests/: conftest.py  settings.py
tests/src/: test_files.py
tests/testdata/: common_text.txt  large_text.txt
