[tool.poetry]
name = "newfilestorage"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
pydantic-settings = "^2.6.1"
aiofiles = "^24.1.0"
aiohttp = "^3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
